force-app/main/default/objects/sf_devops__Work_Item__c/fields/sf_devops__Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user working on this work item.</description>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>WorkItems</relationshipLabel>
    <relationshipName>WorkItems</relationshipName>
    <type>Lookup</type>
</CustomField>