force-app/main/default/objects/sf_devops__Work_Item__c/fields/sf_devops__Branch__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The branch that this work item is using.</description>
    <label>Branch</label>
    <referenceTo>sf_devops__Branch__c</referenceTo>
    <relationshipLabel>Work Items</relationshipLabel>
    <relationshipName>Work_Items</relationshipName>
    <type>Lookup</type>
</CustomField>