force-app/main/default/objects/sf_devops__Work_Item__c/fields/sf_devops__Change_Bundle__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Change_Bundle__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The bundle this work item has been associated with</description>
    <label>Change Bundle</label>
    <referenceTo>sf_devops__Change_Bundle__c</referenceTo>
    <relationshipLabel>Work Items</relationshipLabel>
    <relationshipName>Work_Items</relationshipName>
    <type>Lookup</type>
</CustomField>