force-app/main/default/objects/sf_devops__Work_Item__c/fields/sf_devops__Combine_Status__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Combine_Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The AOR referencing the most recent attempt to combine other work items with this work item.</description>
    <label>Combine Status</label>
    <referenceTo>sf_devops__Async_Operation_Result__c</referenceTo>
    <relationshipLabel>Combine Work Items</relationshipLabel>
    <relationshipName>Combine_Work_Items</relationshipName>
    <type>Lookup</type>
</CustomField>