force-app/main/default/objects/sf_devops__Work_Item__c/fields/sf_devops__Combined_With__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Combined_With__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The work item that this work item has been combined into.</description>
    <label>Combined With</label>
    <referenceTo>sf_devops__Work_Item__c</referenceTo>
    <relationshipLabel>Combined Work Items</relationshipLabel>
    <relationshipName>Combined_Work_Items</relationshipName>
    <type>Lookup</type>
</CustomField>