force-app/main/default/objects/sf_devops__Work_Item__c/fields/sf_devops__Development_Approved__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Development_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicating that this work item has been reviewed and approved in the Dev Ops Center.</description>
    <label>Development Approved</label>
    <type>Checkbox</type>
</CustomField>