force-app/main/default/objects/sf_devops__Work_Item__c/fields/sf_devops__Development_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Development_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A reference to the user that approved this work item.</description>
    <label>Development Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approved_Work_Items</relationshipName>
    <type>Lookup</type>
</CustomField>