force-app/main/default/objects/sf_devops__Work_Item__c/fields/sf_devops__Promoted__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Promoted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has this Work Item been promoted into a Pipeline Stage?</description>
    <inlineHelpText>Managed by the DevOps Center, when this Work Item record moves into a promoted state, this value will be updated to true automatically.</inlineHelpText>
    <label>Promoted</label>
    <type>Checkbox</type>
</CustomField>