force-app/main/default/objects/sf_devops__Work_Item__c/fields/sf_devops__Promoted_From_Environment__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Promoted_From_Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The environment that this work item was promoted.</description>
    <label>Promoted From Environment</label>
    <referenceTo>sf_devops__Environment__c</referenceTo>
    <relationshipLabel>Work Items</relationshipLabel>
    <relationshipName>Work_Items_Environments</relationshipName>
    <type>Lookup</type>
</CustomField>