force-app/main/default/objects/sf_devops__Work_Item__c/fields/sf_devops__Rebase_Branch__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Rebase_Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The rebase branch that this work item is using.</description>
    <label>Rebase Branch</label>
    <referenceTo>sf_devops__Branch__c</referenceTo>
    <relationshipLabel>Rebased Work Items</relationshipLabel>
    <relationshipName>Rebased_Work_Items</relationshipName>
    <type>Lookup</type>
</CustomField>