force-app/main/default/objects/sf_devops__Work_Item__c/fields/sf_devops__State__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__State__c</fullName>
    <description>The current state of this Work Item record.</description>
    <formula>IF(
  sf_devops__Concluded__c = &quot;CLOSED&quot;, &quot;CLOSED&quot;,
IF(
  sf_devops__Concluded__c = &quot;NEVERED&quot;, &quot;NEVERED&quot;,
  IF(
    sf_devops__Concluded__c = &quot;COMBINED&quot;, &quot;COMBINED&quot;,
  IF(
    sf_devops__Promoted__c, &quot;PROMOTED&quot;,
    IF(
      sf_devops__Development_Approved__c, &quot;APPROVED&quot;,
      IF(
        NOT(ISBLANK(sf_devops__Review_Remote_Reference__c)), &quot;IN_REVIEW&quot;,
        IF(
          NOT(ISBLANK(sf_devops__Branch__r.sf_devops__Name__c)), &quot;IN_PROGRESS&quot;, &quot;NEW&quot;
          )
        )
      )
    )
  )
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The current state of this Work Item record.</inlineHelpText>
    <label>Status</label>
    <type>Text</type>
</CustomField>